--- a/Vienna/Resources/gl.lproj/Localizable.strings
+++ b/Vienna/Resources/gl.lproj/Localizable.strings
@@ -588,7 +588,7 @@
 /* No comment provided by engineer. */
 "The database file format has changed" = "O formato do arquivo da base de datos cambiou";
 
-/* No comment provided by engineer. */
+/* Body of an alert */
 "The Default style will be used instead." = "O estilo por defecto (Default) será empregado no seu lugar.";
 
 /* No comment provided by engineer. */
@@ -597,7 +597,7 @@
 /* No comment provided by engineer. */
 "The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "O estilo \"%@\" foi instalado no cartafol correspondente e engadido ao menú Estilos.";
 
-/* No comment provided by engineer. */
+/* Title of an alert */
 "The style %@ appears to be missing or corrupted" = "O estilo %@ semella danado ou perdido.";
 
 /* No comment provided by engineer. */
