--- a/Vienna/Resources/pt.lproj/Localizable.strings
+++ b/Vienna/Resources/pt.lproj/Localizable.strings
@@ -483,7 +483,7 @@
 /* No comment provided by engineer. */
 "The database file format has changed" = "O formato de ficheiro da base de dados foi alterado";
 
-/* No comment provided by engineer. */
+/* Body of an alert */
 "The Default style will be used instead." = "Será usado o estilo Padrão em alternativa.";
 
 /* No comment provided by engineer. */
@@ -492,7 +492,7 @@
 /* No comment provided by engineer. */
 "The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "O estilo \"%@\" foi instalado na sua pasta de estilos e adicionado ao menu de estilos.";
 
-/* No comment provided by engineer. */
+/* Title of an alert */
 "The style %@ appears to be missing or corrupted" = "O estilo %@ parece estar em falta ou corrompido";
 
 /* No comment provided by engineer. */
