Revert "Update localizations"
This reverts commit 11276d0e5805ed44678d55d4afdeec6748207474.

--- a/Vienna/Interfaces/de.lproj/RSSFeed.strings
+++ b/Vienna/Interfaces/de.lproj/RSSFeed.strings
@@ -11,7 +11,7 @@
 "106.title" = "Ein neues Abonnement erstellen";
 
 /* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
-"107.title" = "Gib den Link für das Abonnement ein oder wähle eine Quelle aus der Liste.";
+"107.title" = "Geben Sie den Link für das Abonnement ein oder wählen Sie eine Quelle aus der Liste.";
 
 /* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "Adresse:";
