--- a/Vienna/Interfaces/nl.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/nl.lproj/FeedCredentials.strings
@@ -5,7 +5,7 @@
 "33.title" = "Gebruikersnaam:";
 
 /* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
-"34.title" = "Toegang tot %@ vereist een gebruikersnaam en wachtwoord";
+"34.title" = "U dient een gebruikersnaam en wachtwoord op te geven om toegang te krijgen tot %@.";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Wachtwoord:";
@@ -14,5 +14,5 @@
 "38.title" = "Log in";
 
 /* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
-"39.title" = "De opgegeven gebruikersnaam en wachtwoord zullen worden opgeslagen, zodat je deze niet nog eens hoeft op te geven.";
+"39.title" = "De opgegeven gebruikersnaam en wachtwoord zullen worden opgeslagen, zodat u deze niet nog eens hoeft op te geven.";
 
