--- a/Vienna/Interfaces/de.lproj/EmptyTrashWarning.strings
+++ b/Vienna/Interfaces/de.lproj/EmptyTrashWarning.strings
@@ -5,7 +5,7 @@
 "18.title" = "Papierkorb NICHT leeren";
 
 /* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
-"19.title" = "Es gibt noch gelöschte Artikel im Papierkorb. Möchtest du den Papierkorb vor Beenden leeren?";
+"19.title" = "Es gibt noch gelöschte Artikel im Papierkorb. Möchten Sie den Papierkorb vor Beenden leeren?";
 
 /* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Diese Warnung nicht mehr anzeigen";
